<resources>
    <string name="app_name">IceCream</string>
    <string name="list_title">Shops</string>
    <string name="arrow_icon_desc">arrowIcon</string>
    <string name="rate_icon_desc">rateIcon</string>
    <string name="drawer_item_one">Shops</string>
    <string name="drawer_item_two">Map</string>
    <string name="drawer_item_zero">New Shop</string>
    <string name="drawer_item_three">Settings</string>
    <string name="drawer_item_four">Logout</string>
    <string name="menu_item_one">Search</string>
    <string name="menu_item_two">Sort AZ</string>
    <string name="menu_item_three">Other</string>
    <string name="add_marker_btn">Add new</string>
    <string name="rationale_dialog_title">Attention!</string>
    <string name="location_permission_explanation">The map needs permission to know your location to work properly.</string>
    <string name="exit">Exit</string>
    <string name="proceed">Proceed</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_new_shop_here">Add shop here</string>
    <string name="name_address_empty">Name or address is empty</string>
    <string name="shop_added">New shop added</string>
    <string name="add_unsuccessful">Add unsuccessful</string>
    <string name="shop_name">Shop\'s name</string>
    <string name="shops_address">Shop\'s address</string>
    <string name="content_desc_add_new_shop">Add new shop</string>
    <string name="cd_show_shops_image">Show shops image</string>
    <string name="registration_successful">Registration successful, now you can login</string>
    <string name="registration_unsuccessful">Registration unsuccessful</string>
    <string name="login_successful">Login successful</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="email_password_empty">Email or password is empty</string>
    <string name="cd_login_image">Login Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Registration</string>
    <string name="logged_in">logged in</string>
    <string name="write_comment">Write comment…</string>
    <string name="cd_send_image_btn">Send image button</string>
    <string name="detail_title">Shop</string>
    <string name="map_title">Map</string>
    <string name="add_new_shop">Add new shop</string>
    <string name="successful_comment">Comment successful</string>
    <string name="empty_comment">Empty comment</string>
    <string name="add_review">Rate</string>
    <string name="review">Rate</string>
    <string name="review_success">Rating successful</string>
    <string name="already_reviewed">Already rated</string>
    <string name="edit">Edit</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="lang_title">Language</string>
    <string name="darkThemeTitle">Dark theme</string>
    <string name="appearance">Appearance</string>
    <string name="settings_title">Settings</string>
    <string name="save">Save</string>
    <string name="profile_updated">Profile updated</string>
    <string name="gallery_or_create">Upload from gallery or take picture</string>
    <string name="external_storage_explanation">The app needs permission to read files to load photos.</string>
    <string name="take_photo">Take picture</string>
    <string name="upload_photo">Upload picture</string>
    <string name="upload_successful">Successful upload</string>
    <string name="phone_number">Phone number:</string>
    <string name="email2">Email:</string>
    <string name="example_email">example@mail.com</string>
    <string name="emailVerified">Email verified:</string>
    <string name="verified">Verified:</string>
    <string name="last_login">Last login:</string>
    <string name="registered">Registration:</string>
    <string name="logout">Logout</string>
    <string name="reauthenticate">Reauthenticate</string>
    <string name="authenticate">Authenticate</string>
    <string name="authenticate_success">Authentication successful, now you can edit!</string>
    <string name="verification_email_sent">The verification email was sent to the given email address</string>
    <string name="password_updated">Password edit successful</string>
    <string name="user_settings">User settings</string>
    <string name="edit_password">Edit password</string>
    <string name="date_pattern_ymd">dd/MM/yyyy</string>
    <string name="verify">Verify</string>
    <string name="search">Search</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="have_no_permission">You have no permission to enter</string>
    <string name="delete">Delete</string>
    <string name="approve">Approve</string>
    <string name="reauth_succes">Successful reauthentication</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="send">Send</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="no_internet">Internet is unavailable</string>
    <string name="distance_no_permission">Distance: The Application does not have permission to the location data</string>
    <string name="distance">Distance:</string>
</resources>
